Adding testing robustness

--- a/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
+++ b/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
@@ -44,6 +44,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "path_csv = \"../../../Thesis_data/processed_data/\"\n",
+    "X_train = pd.read_csv(path_csv + \"ontime_reporting_X_train_unscaled.csv\")\n",
+    "y_train = pd.read_csv(path_csv + \"ontime_reporting_y_train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.combine import SMOTEENN\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "random_state=101\n",
+    "smoteenn = SMOTEENN(random_state=random_state)\n",
+    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
