--- a/_3. Evaluation/3. RUS_eval.ipynb
+++ b/_3. Evaluation/3. RUS_eval.ipynb
@@ -2,34 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import joblib\n",
+    "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from functions import auroc_curve, evaluation, rm\n",
+    "from functions import auroc_curve, evaluation, rm, complete_confusion_matrix_robust, evaluation_robustness, complete_confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "results = pd.DataFrame(columns=[\"Model\", \"AUROC\", \"Balanced Accuracy\", \"F1\", \"Recall\", \"Precision\"])\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "results = pd.DataFrame(columns=[\"Model\", \"AUROC\", \"Accuracy\", \"F1\", \"Recall\", \"Precision\"])\n",
+    "model_results = pd.DataFrame(columns=[\"Model\", \"AUROC\", \"Accuracy\", \"F1\", \"Recall\", \"Precision\"])\n",
+    "\n",
     "path_csv = \"../../../Thesis_data/processed_data/\"\n",
     "path_model = \"../../../Thesis_data/Models/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test = pd.read_csv(path_csv + \"ontime_reporting_X_test.csv\")\n",
-    "y_test = pd.read_csv(path_csv + \"ontime_reporting_y_test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,13 +35,40 @@
      "text": [
       "Memory usage of dataframe is 314.23 MB\n",
       "Memory usage after optimization is: 78.56 MB\n",
+      "Decreased by 75.0%\n",
+      "Memory usage of dataframe is 314.23 MB\n",
+      "Memory usage after optimization is: 78.56 MB\n",
+      "Decreased by 75.0%\n",
+      "Memory usage of dataframe is 314.23 MB\n",
+      "Memory usage after optimization is: 78.56 MB\n",
+      "Decreased by 75.0%\n",
+      "Memory usage of dataframe is 314.23 MB\n",
+      "Memory usage after optimization is: 78.56 MB\n",
+      "Decreased by 75.0%\n",
+      "Memory usage of dataframe is 314.23 MB\n",
+      "Memory usage after optimization is: 78.56 MB\n",
       "Decreased by 75.0%\n"
      ]
     }
    ],
    "source": [
-    "X_test = rm(X_test)\n",
-    "y_test = np.ravel(y_test)"
+    "X_test_101 = rm(pd.read_csv(path_csv + \"ontime_reporting_X_test_101.csv\"))\n",
+    "y_test_101 = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_test_101.csv\"))\n",
+    "\n",
+    "X_test_102 = rm(pd.read_csv(path_csv + \"ontime_reporting_X_test_102.csv\"))\n",
+    "y_test_102 = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_test_102.csv\"))\n",
+    "\n",
+    "X_test_103 = rm(pd.read_csv(path_csv + \"ontime_reporting_X_test_103.csv\"))\n",
+    "y_test_103 = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_test_103.csv\"))\n",
+    "\n",
+    "X_test_104 = rm(pd.read_csv(path_csv + \"ontime_reporting_X_test_104.csv\"))\n",
+    "y_test_104 = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_test_104.csv\"))\n",
+    "\n",
+    "X_test_105 = rm(pd.read_csv(path_csv + \"ontime_reporting_X_test_105.csv\"))\n",
+    "y_test_105 = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_test_105.csv\"))\n",
+    "\n",
+    "X_tests = [X_test_101, X_test_102, X_test_103, X_test_104, X_test_105]\n",
+    "y_tests = [y_test_101, y_test_102, y_test_103, y_test_104, y_test_105]"
    ]
   },
   {
@@ -52,6 +76,24 @@
    "metadata": {},
    "source": [
     "## Evaluate Logistic Regression tuned RUS model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg_tuned_rus = joblib.load(path_model + \"logreg_tuned_RUS.joblib\")\n",
+    "cm_robust_logreg = np.zeros((2,2)).astype(int)\n",
+    "\n",
+    "for X_t, y_t in zip(X_tests, y_tests):\n",
+    "    y_pred = logreg_tuned_rus.predict(X_t)\n",
+    "    y_pred_prob = logreg_tuned_rus.predict_proba(X_t)[:, 1]\n",
+    "    cm_robust_logreg += confusion_matrix(y_t, y_pred)\n",
+    "    evaluation_robustness(y_t, logreg_tuned_rus, y_pred, y_pred_prob, model_results)\n",
+    "\n",
+    "cm_robust_logreg //= 5"
    ]
   },
   {
@@ -71,8 +113,8 @@
    ],
    "source": [
     "logreg_tuned_rus = joblib.load(path_model + \"logreg_tuned_RUS.joblib\")\n",
-    "y_pred_logreg_tuned_rus = logreg_tuned_rus.predict(X_test)\n",
-    "y_pred_prob_logreg_tuned_rus = logreg_tuned_rus.predict_proba(X_test)[:, 1]"
+    "y_pred_logreg_tuned_rus = logreg_tuned_rus.predict(X_test_101)\n",
+    "y_pred_prob_logreg_tuned_rus = logreg_tuned_rus.predict_proba(X_test_101)[:, 1]"
    ]
   },
   {
@@ -103,7 +145,7 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_logreg_tuned_rus, logreg_tuned_rus, y_pred_prob_logreg_tuned_rus, results)"
+    "evaluation(y_test_101, y_pred_logreg_tuned_rus, logreg_tuned_rus, y_pred_prob_logreg_tuned_rus, results)"
    ]
   },
   {
@@ -111,6 +153,24 @@
    "metadata": {},
    "source": [
     "## Evaluate XGBoost tuned RUS model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_class_tuned_rus = joblib.load(path_model + \"XGBoost_tuned_RUS.joblib\")\n",
+    "cm_robust_xgb = np.zeros((2,2)).astype(int)\n",
+    "\n",
+    "for X_t, y_t in zip(X_tests, y_tests):\n",
+    "    y_pred = xgb_class_tuned_rus.predict(X_t)\n",
+    "    y_pred_prob = xgb_class_tuned_rus.predict_proba(X_t)[:, 1]\n",
+    "    cm_robust_xgb += confusion_matrix(y_t, y_pred)\n",
+    "    evaluation_robustness(y_t, xgb_class_tuned_rus, y_pred, y_pred_prob, model_results)\n",
+    "\n",
+    "cm_robust_xgb //= 5"
    ]
   },
   {
@@ -136,8 +196,8 @@
    ],
    "source": [
     "xgb_class_tuned_rus = joblib.load(path_model + \"XGBoost_tuned_RUS.joblib\")\n",
-    "y_pred_xgb_tuned_rus = xgb_class_tuned_rus.predict(X_test)\n",
-    "y_pred_prob_xgb_tuned_rus = xgb_class_tuned_rus.predict_proba(X_test)[:, 1]"
+    "y_pred_xgb_tuned_rus = xgb_class_tuned_rus.predict(X_test_101)\n",
+    "y_pred_prob_xgb_tuned_rus = xgb_class_tuned_rus.predict_proba(X_test_101)[:, 1]"
    ]
   },
   {
@@ -168,7 +228,7 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_xgb_tuned_rus, xgb_class_tuned_rus, y_pred_prob_xgb_tuned_rus, results)"
+    "evaluation(y_test_101, y_pred_xgb_tuned_rus, xgb_class_tuned_rus, y_pred_prob_xgb_tuned_rus, results)"
    ]
   },
   {
@@ -180,14 +240,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabnet_tuned_rus = torch.load(path_model + \"TabNet_tuned_RUS.pt\", map_location=torch.device('cpu'))\n",
+    "tabnet_tuned_rus.device = \"cpu\"\n",
+    "cm_robust_tabnet = np.zeros((2,2)).astype(int)\n",
+    "\n",
+    "for X_t, y_t in zip(X_tests, y_tests):\n",
+    "    y_pred = tabnet_tuned_rus.predict(X_t.values)\n",
+    "    y_pred_prob = tabnet_tuned_rus.predict_proba(X_t.values)[:, 1]\n",
+    "    cm_robust_tabnet += confusion_matrix(y_t, y_pred)\n",
+    "    evaluation_robustness(y_t, tabnet_tuned_rus, y_pred, y_pred_prob, model_results)\n",
+    "\n",
+    "cm_robust_tabnet //= 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "tabnet_tuned_rus = torch.load(path_model + \"TabNet_tuned_RUS.pt\", map_location=torch.device('cpu'))\n",
     "tabnet_tuned_rus.device = \"cpu\"\n",
-    "y_pred_tabnet_tuned_rus = tabnet_tuned_rus.predict(X_test.values)\n",
-    "y_pred_prob_tabnet_tuned_rus = tabnet_tuned_rus.predict_proba(X_test.values)[:, 1]"
+    "y_pred_tabnet_tuned_rus = tabnet_tuned_rus.predict(X_test_101.values)\n",
+    "y_pred_prob_tabnet_tuned_rus = tabnet_tuned_rus.predict_proba(X_test_101.values)[:, 1]"
    ]
   },
   {
@@ -218,7 +297,7 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_tabnet_tuned_rus, tabnet_tuned_rus, y_pred_prob_tabnet_tuned_rus, results)"
+    "evaluation(y_test_101, y_pred_tabnet_tuned_rus, tabnet_tuned_rus, y_pred_prob_tabnet_tuned_rus, results)"
    ]
   },
   {
@@ -226,6 +305,24 @@
    "metadata": {},
    "source": [
     "## Evaluate Random Forests tuned RUS model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_tuned_rus = joblib.load(path_model + \"rf_tuned_RUS.joblib\")\n",
+    "cm_robust_rf = np.zeros((2,2)).astype(int)\n",
+    "\n",
+    "for X_t, y_t in zip(X_tests, y_tests):\n",
+    "    y_pred = rf_tuned_rus.predict(X_t.values)\n",
+    "    y_pred_prob = rf_tuned_rus.predict_proba(X_t.values)[:, 1]\n",
+    "    cm_robust_rf += confusion_matrix(y_t, y_pred)\n",
+    "    evaluation_robustness(y_t, rf_tuned_rus, y_pred, y_pred_prob, model_results)\n",
+    "\n",
+    "cm_robust_rf //= 5"
    ]
   },
   {
@@ -256,8 +353,8 @@
    ],
    "source": [
     "rf_tuned_rus = joblib.load(path_model + \"rf_tuned_RUS.joblib\")\n",
-    "y_pred_rf_tuned_rus = rf_tuned_rus.predict(X_test)\n",
-    "y_pred_prob_rf_tuned_rus = rf_tuned_rus.predict_proba(X_test)[:, 1]"
+    "y_pred_rf_tuned_rus = rf_tuned_rus.predict(X_test_101)\n",
+    "y_pred_prob_rf_tuned_rus = rf_tuned_rus.predict_proba(X_test_101)[:, 1]"
    ]
   },
   {
@@ -288,7 +385,14 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_rf_tuned_rus, rf_tuned_rus, y_pred_prob_rf_tuned_rus, results)"
+    "evaluation(y_test_101, y_pred_rf_tuned_rus, rf_tuned_rus, y_pred_prob_rf_tuned_rus, results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final results per model"
    ]
   },
   {
@@ -384,6 +488,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "final_result = model_results.groupby('Model').agg({\n",
+    "    'AUROC': [('mean', 'mean'), ('range', lambda x: np.max(x) - np.min(x))],\n",
+    "    'Accuracy': [('mean', 'mean'), ('range', lambda x: np.max(x) - np.min(x))],\n",
+    "    'F1': [('mean', 'mean'), ('range', lambda x: np.max(x) - np.min(x))],\n",
+    "    'Recall': [('mean', 'mean'), ('range', lambda x: np.max(x) - np.min(x))],\n",
+    "    'Precision': [('mean', 'mean'), ('range', lambda x: np.max(x) - np.min(x))]\n",
+    "})\n",
+    "\n",
+    "final_result.columns = ['_'.join(col).strip() for col in final_result.columns.values]\n",
+    "\n",
+    "final_result.sort_values(by=[\"AUROC_mean\"], ascending=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -410,6 +531,15 @@
    ],
    "source": [
     "auroc_curve(y_test, y_pred_prob_logreg_tuned_rus, y_pred_prob_xgb_tuned_rus, y_pred_prob_tabnet_tuned_rus, y_pred_prob_rf_tuned_rus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_confusion_matrix_robust([cm_robust_logreg, cm_robust_xgb, cm_robust_tabnet, cm_robust_rf], ['Logistic Regression', 'XGBoost', 'TabNet', 'Random Forest'])"
    ]
   }
  ],
