Added more feature importance

--- a/_2. Modeling/3. tuned_SMOTE-RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_SMOTE-RUS_models.ipynb
@@ -19,7 +19,8 @@
     "import optuna\n",
     "from optuna import Trial, visualization\n",
     "from optuna.samplers import TPESampler\n",
-    "from imblearn.combine import SMOTEENN, SMOTETomek\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
     "from imblearn.pipeline import Pipeline\n",
     "from functions import rm\n",
     "\n",
@@ -36,43 +37,15 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "\n",
-    "X_train = pd.read_csv(path_csv + \"ontime_reporting_X_train.csv\")\n",
-    "y_train = pd.read_csv(path_csv + \"ontime_reporting_y_train.csv\")\n",
-    "\n",
-    "X_train = rm(X_train)\n",
-    "y_train = np.ravel(y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "path_csv = \"../../../Thesis_data/processed_data/\"\n",
-    "X_train = pd.read_csv(path_csv + \"ontime_reporting_X_train_unscaled.csv\")\n",
-    "y_train = pd.read_csv(path_csv + \"ontime_reporting_y_train.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from imblearn.combine import SMOTEENN\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "random_state=101\n",
-    "smoteenn = SMOTEENN(random_state=random_state)\n",
-    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)"
+    "X_train = rm(pd.read_csv(path_csv + \"ontime_reporting_X_train.csv\"))\n",
+    "y_train = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_train.csv\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Logistic Regression model on SMOTE-ENN data"
+    "## Tuned Logistic Regression model on SMOTE-RUS data"
    ]
   },
   {
@@ -89,7 +62,8 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"smoteenn\", SMOTEENN(random_state=random_state, n_jobs=-1)),\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"logreg\", LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2))\n",
     "    ]\n",
     "\n",
@@ -108,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned SMOTE+RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -155,11 +129,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
-    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
+    "pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tuned_lr_smoteenn = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
-    "tuned_lr_smoteenn.fit(X_smoteenn, y_smoteenn)"
+    "X_smoterus, y_smoterus = pipeline.fit_resample(X_train, y_train)\n",
+    "tuned_lr = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
+    "tuned_lr.fit(X_smoterus, y_smoterus)"
    ]
   },
   {
@@ -168,15 +147,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_logreg_tuned_SMOTE-ENN.pkl')\n",
-    "joblib.dump(tuned_lr_smoteenn, 'logreg_tuned_SMOTE-ENN.joblib')"
+    "joblib.dump(study, 'study_logreg_tuned_SMOTE-RUS.pkl')\n",
+    "joblib.dump(tuned_lr, 'logreg_tuned_SMOTE-RUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned XGBoost model on SMOTE-ENN data"
+    "## Tuned XGBoost model on SMOTE-RUS data"
    ]
   },
   {
@@ -198,7 +177,8 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"smoteenn\", SMOTEENN(random_state=random_state, n_jobs=-1)),\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"xgb\", xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, verbosity=1, device=\"cuda\"))\n",
     "    ]\n",
     "\n",
@@ -217,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned SMOTE-RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_xgboost, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -256,11 +236,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smoteenn = SMOTEENN(random_state=random_state)\n",
-    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
+    "pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tuned_xgb_smoteenn = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_smoteenn.fit(X_smoteenn, y_smoteenn)"
+    "X_smoterus, y_smoterus = pipeline.fit_resample(X_train, y_train)\n",
+    "tuned_xgb = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
+    "tuned_xgb.fit(X_smoterus, y_smoterus)"
    ]
   },
   {
@@ -269,15 +254,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_XGBoost_tuned_SMOTE-ENN.pkl')\n",
-    "joblib.dump(tuned_xgb_smoteenn, 'XGBoost_tuned_SMOTE-ENN.joblib')"
+    "joblib.dump(study, 'study_XGBoost_tuned_SMOTE-RUS.pkl')\n",
+    "joblib.dump(tuned_xgb, 'XGBoost_tuned_SMOTE-RUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Random Forests model on SMOTE-ENN data"
+    "## Tuned Random Forests model on SMOTE-RUS data"
    ]
   },
   {
@@ -288,14 +273,15 @@
    "source": [
     "def objective_rf(trial):\n",
     "    params = {\n",
-    "        \"max_depth\": trial.suggest_int(\"max_depth\", 5, 20),\n",
+    "        \"max_depth\": trial.suggest_int(\"max_depth\", 3, 20),\n",
     "        \"min_samples_leaf\": trial.suggest_int(\"min_samples_leaf\", 5, 9),\n",
     "        \"min_samples_split\": trial.suggest_int(\"min_samples_split\", 2, 10),\n",
     "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 150, 350, step=50),\n",
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"smotetomek\", SMOTETomek(random_state=random_state, n_jobs=-1)),\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
     "\n",
@@ -314,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned SMOTE-Tomek', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned SMOTE-RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -353,11 +339,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
-    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
+    "pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tuned_rf_smoteenn = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
-    "tuned_rf_smoteenn.fit(X_smoteenn, y_smoteenn)"
+    "X_smoterus, y_smoterus = pipeline.fit_resample(X_train, y_train)\n",
+    "tuned_rf = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "tuned_rf.fit(X_smoterus, y_smoterus)"
    ]
   },
   {
@@ -366,15 +357,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_rf_tuned_SMOTE-ENN.pkl')\n",
-    "joblib.dump(tuned_rf_smoteenn, 'rf_tuned_SMOTE-ENN.joblib')"
+    "joblib.dump(study, 'study_rf_tuned_SMOTE-RUS.pkl')\n",
+    "joblib.dump(tuned_rf, 'rf_tuned_SMOTE-RUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned TabNet model on SMOTE-ENN data"
+    "## Tuned TabNet model on SMOTE-RUS data"
    ]
   },
   {
@@ -391,6 +382,7 @@
     "        \"gamma\": trial.suggest_float(\"gamma\", 1.0, 2.0, step=0.01),\n",
     "        \"n_shared\": trial.suggest_int(\"n_shared\", 1, 5),\n",
     "        \"lambda_sparse\": trial.suggest_categorical(\"lambda_sparse\", [1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]),\n",
+    "        #\"mask_type\": trial.suggest_categorical(\"mask_type\", [\"sparsemax\", \"entmax\"])\n",
     "    }\n",
     "\n",
     "    model_tabnetClass = TabNetClassifier(**params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=params[\"n_d\"], device_name=\"cuda\") #device_name=\"cuda\"\n",
@@ -403,16 +395,19 @@
     "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
     "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
     "\n",
-    "        smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
-    "        X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train_fold, y_train_fold)\n",
+    "        smote = SMOTE(random_state=random_state)\n",
+    "        X_smote, y_smote = smote.fit_resample(X_train_fold, y_train_fold)\n",
     "\n",
-    "        model_tabnetClass.fit(X_train = X_smoteenn.values,\n",
-    "                              y_train = y_smoteenn,\n",
+    "        rus = RandomUnderSampler(random_state=random_state)\n",
+    "        X_rus, y_rus = rus.fit_resample(X_smote, y_smote)\n",
+    "\n",
+    "        model_tabnetClass.fit(X_train = X_rus.values,\n",
+    "                              y_train = y_rus,\n",
     "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
     "                              patience=2,\n",
     "                              max_epochs=4,\n",
-    "                              batch_size=14000,\n",
-    "                              virtual_batch_size=14000,\n",
+    "                              batch_size=44000,\n",
+    "                              virtual_batch_size=44000,\n",
     "                              eval_metric=[\"auc\"]\n",
     "                              )\n",
     "\n",
@@ -429,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned SMOTE-RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_tabnet, n_trials=20, show_progress_bar=True, gc_after_trial=True)"
    ]
   },
@@ -468,11 +463,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smoteenn = SMOTEENN(random_state=random_state, n_jobs=-1)\n",
-    "X_smoteenn, y_smoteenn = smoteenn.fit_resample(X_train, y_train)\n",
+    "pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"smote\", SMOTE(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tabnet_tuned_smoteenn = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_smoteenn.fit(X_smoteenn.values, y_smoteenn, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+    "X_smoterus, y_smoterus = pipeline.fit_resample(X_train, y_train)\n",
+    "tabnet_tuned = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
+    "tabnet_tuned.fit(X_smoterus.values, y_smoterus, max_epochs=4, batch_size=44000, virtual_batch_size=44000)"
    ]
   },
   {
@@ -481,8 +481,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_tabnet_tuned_SMOTE-ENN.pkl')\n",
-    "torch.save(tabnet_tuned_smoteenn, 'TabNet_tuned_SMOTE-ENN.pt')"
+    "joblib.dump(study, 'study_tabnet_tuned_SMOTE-RUS.pkl')\n",
+    "torch.save(tabnet_tuned, 'TabNet_tuned_SMOTE-RUS.pt')"
    ]
   }
  ],
