--- a/_3. Evaluation/3. ROS+RUS_eval.ipynb
+++ b/_3. Evaluation/3. ROS+RUS_eval.ipynb
@@ -424,7 +424,7 @@
     }
    ],
    "source": [
-    "complete_confusion_matrix(y_test, [y_pred_rf_tuned_rosrus, \n",
+    "complete_confusion_matrix(y_test, [y_pred_logreg_tuned_rosrus, \n",
     "                                   y_pred_xgb_tuned_rosrus, \n",
     "                                   y_pred_tabnet_tuned_rosrus, \n",
     "                                   y_pred_rf_tuned_rosrus], \n",
