--- a/_3. Evaluation/3. RUS_eval.ipynb
+++ b/_3. Evaluation/3. RUS_eval.ipynb
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "complete_confusion_matrix(y_test, [y_pred_rf_tuned_rus, \n",
+    "complete_confusion_matrix(y_test, [y_pred_logreg_tuned_rus, \n",
     "                                   y_pred_xgb_tuned_rus, \n",
     "                                   y_pred_tabnet_tuned_rus, \n",
     "                                   y_pred_rf_tuned_rus], \n",
