--- a/_3. Evaluation/3_ROS_eval.ipynb
+++ b/_3. Evaluation/3_ROS_eval.ipynb
@@ -1061,7 +1061,7 @@
         }
       ],
       "source": [
-        "complete_confusion_matrix(y_test, [y_pred_rf_tuned_ros,\n",
+        "complete_confusion_matrix(y_test, [y_pred_logreg_tuned_ros,\n",
         "                                   y_pred_xgb_tuned_ros,\n",
         "                                   y_pred_tabnet_tuned_ros,\n",
         "                                   y_pred_rf_tuned_ros],\n",
