--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -54,9 +54,9 @@
     "                        ]\n",
     "\n",
     "cols_us_cities = [\"City\", #City name with state abbreviation used to match with ontime_reporting ORIGIN_CITY_NAME\n",
-    "                  \"Median Age\",\n",
-    "                  \"Total Population\",\n",
-    "                  \"Average Household Size\"\n",
+    "                  \"Median Age\", #Median age per origin city\n",
+    "                  \"Total Population\", #Total population per origin city\n",
+    "                  \"Average Household Size\" #Average household size per origin city\n",
     "                  ]\n",
     "\n",
     "cols_airport_geolocation = [\"iata\", #International Air Transport Association's (IATA) Location Identifier code, unique 3 letter code\n",
