Added Thesis, started work on hourly weather data

--- a/_2. Modeling/1. Baselines.ipynb
+++ b/_2. Modeling/1. Baselines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from pytorch_tabnet.tab_model import TabNetClassifier\n",
     "import xgboost as xgb\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
     "from functions import rm\n",
     "\n",
     "random_state = 101\n",
@@ -25,17 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = pd.read_csv(path_csv + \"ontime_reporting_X_train.csv\")\n",
-    "y_train = pd.read_csv(path_csv + \"ontime_reporting_y_train.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -43,15 +34,14 @@
      "output_type": "stream",
      "text": [
       "Memory usage of dataframe is 1256.91 MB\n",
-      "Memory usage after optimization is: 242.04 MB\n",
-      "Decreased by 80.7%\n"
+      "Memory usage after optimization is: 229.30 MB\n",
+      "Decreased by 81.8%\n"
      ]
     }
    ],
    "source": [
-    "#Reducing memory usage\n",
-    "X_train = rm(X_train)\n",
-    "y_train = np.ravel(y_train)"
+    "X_train = rm(pd.read_csv(path_csv + \"ontime_reporting_X_train_unscaled.csv\"))\n",
+    "y_train = np.ravel(pd.read_csv(path_csv + \"ontime_reporting_y_train.csv\"))"
    ]
   },
   {
@@ -126,6 +116,35 @@
     "rf_baseline = RandomForestClassifier(random_state=random_state, n_jobs=-1)\n",
     "rf_baseline.fit(X_train, y_train)\n",
     "joblib.dump(rf_baseline, path_model + 'rf_baseline.joblib') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../../Thesis_data/Models/nb_baseline.joblib']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gnb_baseline = GaussianNB()\n",
+    "gnb_baseline.fit(X_train, y_train)\n",
+    "joblib.dump(gnb_baseline, path_model + 'nb_baseline.joblib') "
    ]
   }
  ],
