--- a/_2. Modeling/2. tuned_imbalanced_models.ipynb
+++ b/_2. Modeling/2. tuned_imbalanced_models.ipynb
@@ -69,13 +69,15 @@
     "#Also paper by Dahir\n",
     "\n",
     "def objective_lr(trial):\n",
-    "    params = {\n",
-    "        \"C\": trial.suggest_float(\"C\", 0.001, 1000.0, log=True), #log=True helps to search a large range efficiently with fewer trials\n",
-    "        \"solver\": trial.suggest_categorical(\"solver\", [\"sag\",\"saga\",\"newton-cholesky\"]), #\"sag\" and \"saga\" works on features with the same scale\n",
-    "        \"penalty\": trial.suggest_categorical(\"penalty\", [\"l2\", None])\n",
-    "    }\n",
+    "    C = trial.suggest_float(\"C\", 0.001, 1000.0, log=True) #log=True helps to search a large range efficiently with fewer trials\n",
+    "    solver = trial.suggest_categorical(\"solver\", [\"sag\",\"saga\",\"newton-cholesky\"]) #\"sag\" and \"saga\" works on features with the same scale\n",
+    "    if solver == \"saga\": #or solver == \"proximal_grad\":\n",
+    "        penalty = trial.suggest_categorical(\"penalty_saga\", [\"l1\", \"l2\", None, \"elasticnet\"])\n",
+    "    else:\n",
+    "        penalty = trial.suggest_categorical(\"penalty\", [\"l2\", None])\n",
+    "    #\"penalty\": trial.suggest_categorical(\"penalty\", [\"l2\", None])\n",
     "\n",
-    "    model_lrClass = LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2)\n",
+    "    model_lrClass = LogisticRegression(solver=solver, C=C, penalty=penalty, random_state=random_state, n_jobs=-1, verbose=2)\n",
     "\n",
     "    skfold = StratifiedKFold(n_splits=3, random_state=random_state, shuffle=True)\n",
     "\n",
